# thermohygrometer_calibration

./: .gitignore  README.md  flake.nix  index.qmd  pyproject.toml
data/: layout.csv  layout_actual.csv  layout_simulated.csv
src/thermohygrometer_calibration/: __init__.py  analyze.py  diagnostics.py  fit_bsts.py  simulate.py  visualize.py
